Wed Aug 1 22:34:52 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* configure.in, mono/tests: added some tests for the interpreter.

2001-07-15  Sean MacIsaac  <macisaac@ximian.com>

	* doc/download: added instructions for cygwin
	
	* doc/c-sharp: removed bit about compiling
	
	* status/compare-assembly.cs: basedir should be there if
	parameters are provided.

	* status/makefile: made targets to dump info.
	
2001-07-15  Joe Shaw  <joe@ximian.com>

	* configure.in: Don't create doc/Makefile as there's nothing there
	to make.

	* Makefile.am: Don't build the doc directory because there's no
	Makefile.am there.

	* autogen.sh: Call aclocal with the $ACLOCAL_FLAGS env var.

2001-07-15  Miguel de Icaza  <miguel@ximian.com>

	* doc/class-library (A): Updated FAQ with question on error 1595.

2001-07-14  Miguel de Icaza  <miguel@ximian.com>

	* doc/index: 

Wed Jul 11 00:36:36 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* status/*: scripts and data to create statistics about the
	class library status.

2001-07-09  Alex Graveley  <alex@ximian.com>

	* doc/makefile (clean): Add clean target.
	* doc/web/makefile (clean): Ditto.

2001-07-09  Alex Graveley  <alex@ximian.com>

	* doc/makefile (all-docs): Fix typo.

2001-05-30  Miguel de Icaza  <miguel@ximian.com>

	* NEWS: 
